[package]
name = "testpest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.10"
pest_derive = "2.7.10"
itertools = "0.13.0"
rustc-hash = "1.1.0"
log = "0.4.21"
simple_logger = "5.0.0"
smallvec = "1.13.2"

[profile.release]
incremental = false
panic = "abort"
#debug = false
debug = 2
opt-level = 3
lto = true
codegen-units = 1
#strip = "debuginfo"