[package]
name = "moon_script"
version = "0.1.0"
edition = "2021"

authors = ["Jorge Rico Vivas <jorgericosoftware@gmail.com>"]
description = "Fast and simple scripting language based on Rust."
repository = "https://github.com/JorgeRicoVivas/moon_script_book"
keywords = ["scripting", "scripting-engine", "scripting-language", "script", "scripts"]
categories = ["no-std", "embedded", "game-development", "parser-implementations"]
license-file = "LICENSE.txt"
readme = "README.md"

[package.metadata.docs.rs]
documentation = "https://jorgericovivas.github.io/moon_script_book/"

[lib]

[dependencies]
paste = "1.0.15"
pest = { version = "2.7.10", default-features = false }
pest_derive = { version = "2.7.10", default-features = false }
log = "0.4.21"

string_colorization = { version = "1.0.0", optional = true }
colored = { version = "2.1.0", optional = true }
simple_detailed_error = { version="0.1.0", default-features = false }

[features]
default = ["std", "colorization"]
## Allows to use std and also implement Error for parsing errors.
std = ["pest/std", "pest_derive/std"]
## Functions added to an Engine can be up to 16 parameters, rather than 8.
medium_functions = []
## Functions added to an Engine can be up to 24 parameters, rather than 8.
big_functions = ["medium_functions"]
## Functions added to an Engine can be up to 40 parameters, rather than 8.
massive_functions = ["big_functions"]
## Parsing errors will get colorized when printing them on the terminal.
colorization = ["dep:string_colorization", "dep:colored", "simple_detailed_error/colorization"]

[dev-dependencies]
simple_logger = "5.0.0"